# machines-configs

./: .ansible-lint  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  ansible.cfg  install.sh  inventory.yaml  pyproject.toml  requirements.yml
.github/workflows/: lint.yaml
configs/: .gitignore  .zshrc
group_vars/: all.yaml  config.yaml
host_vars/: bolino-macbook.yaml  bolino-vm3.yaml  data-bolino.yaml  macbook16-bolino.yaml  pi-bolino.yaml  web-bolino.yaml
playbooks/: install-consul.yaml  install-debian.yaml  install-distant-debian.yaml  install-distant-debian.yaml.yaml  install-docker-web-bolino.yaml  install-local-macos.yaml  install-macos.yaml  install-omnitools.yaml  install-owntracks.yaml  install-pi.yaml  install-pihole.yaml  install-remote-debian.yaml  install-uptime-kuma.yaml  install-wireguard.yaml  prune-docker.yaml  update-all.yaml  update-debian.yaml  update-distant-debian.yaml  update-docker-images.yaml  update-local-macos.yaml  update-macos.yaml  update-remote-debian.yaml  update.yaml  upgrade-debian.yaml
roles/apache2/tasks/: uninstall.yaml
roles/apt/defaults/: main.yaml  main.yml
roles/apt/tasks/: dist_upgrade.yaml  install_sources.yaml  install_sources.yml  upgrade.yaml
roles/apt/templates/: debian.sources.j2  ookla_speedtest-cli.sources.j2  sources.list.j2
roles/bash/tasks/: install.yaml  main.yaml
roles/bash/templates/: .bashrc.j2
roles/bat/tasks/: configure_user.yaml  install.yaml  main.yaml
roles/beszel/defaults/: main.yaml
roles/beszel/handlers/: main.yaml
roles/beszel/meta/: main.yaml
roles/beszel/tasks/: install.yaml  update.yaml
roles/beszel/templates/: docker-compose.agent.yml.j2  docker-compose.hub.yml.j2  nginx-vhost.conf.j2
roles/beszel/vars/: secrets.yaml
roles/biome/tasks/: install.yaml
roles/bun/tasks/: install.yaml  install.yml  main.yaml  main.yml  update.yaml  update.yml
roles/certbot/tasks/: install.yaml
roles/consul/handlers/: main.yaml
roles/cron/tasks/: main.yaml
roles/default/: main.yaml
roles/nginx/: nginx.conf.j2
tasks/: zsh.yaml
templates/: direnv.toml  zshrc.j2
(+315 files in other folders)
