[project]
name = "dotfiles"
version = "0.2.0"
description = "Ansible playbooks for setting up local development and remote machines"
authors = [{ name = "Adrien Carpentier", email = "me@adriencarpentier.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "ansible>=10.4.0",
]

# Ignore flat-layout
# (important to be able to install dependencies with pip from pyproject.toml)
[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
lint = { extend-select = ["I"] }

[tool.uv]
dev-dependencies = [
    "ansible-lint>=24.9.2",
    "ruff>=0.6.8",
]
environments = ["platform_system != 'Windows'"]
