[project]
name = "machines-configs"
dynamic = ["version"]
description = "Ansible playbooks for setting up local development and remote machines"
authors = [{ name = "Adrien Carpentier", email = "me@adriencarpentier.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "ansible>=11.0.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.8.0",
    "ruff>=0.15.0",
]

# Ignore flat-layout
# (important to be able to install dependencies with pip from pyproject.toml)
[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
lint = { extend-select = ["I", "PTH"] }
